Complete English conversion of all project files
- Convert terraform.tfvars.example comments to English
- Convert variables.tf section headers to English
- Convert outputs.tf comments to English
- Convert flarum-setup.sh script comments to English
- Convert MySQL init.sql comments to English
- Convert MySQL my.cnf configuration comments to English
- All project files now fully in English for DevOps learning

--- a/docker/mysql/my.cnf
+++ b/docker/mysql/my.cnf
@@ -1,25 +1,25 @@
 [mysqld]
-# 기본 설정
+# Basic settings
 default-authentication-plugin=mysql_native_password
 character-set-server=utf8mb4
 collation-server=utf8mb4_unicode_ci
 
-# 성능 최적화
+# Performance optimization
 innodb_buffer_pool_size=256M
 innodb_log_file_size=64M
 innodb_flush_log_at_trx_commit=2
 innodb_flush_method=O_DIRECT
 
-# 연결 설정
+# Connection settings
 max_connections=100
 max_connect_errors=1000
 
-# 로그 설정
+# Log settings
 slow_query_log=1
 slow_query_log_file=/var/log/mysql/slow.log
 long_query_time=2
 
-# Flarum을 위한 최적화
+# Optimization for Flarum
 sql_mode=STRICT_TRANS_TABLES,NO_ZERO_DATE,NO_ZERO_IN_DATE,ERROR_FOR_DIVISION_BY_ZERO
 
 [mysql]
